# Portfolio

./: .gitignore  Pipfile  Procfile  README.md  __init__.py  app.py  cards.py  forms.py  poetry.toml  pyproject.toml  requirements.txt
css/: styles.css
portfolio/: app.py  cards.py
portfolio-bu/: __init__.py  app.py  cards.py  forms.py
portfolio/app/: models.py
portfolio/templates/: contact.html  index.html
scripts/: start.ps1
src/portfolio/: __init__.py  app.py  forms.py
static/css/: style.css
static/md/projects/: ExpertHiring Candidate to Job Posting Match Quality Portfolio Entry.md  Orry.ai Business Intelligence Chatbot MVP Portfolio Entry.md  VoxPredict Financial Predictions and Analysis Portfolio Entry.md
templates/: contact.html  index.html  projects.html
tests/: test_cards.py  test_flaskr.py
