[tool.poetry]
name = "portfolio"
version = "0.2.0"
description = "Website built using Flask in order to easily maintain an online portfolio in a modern and engaging fashion."
authors = ["Taras Ivashchuk <taras@tarasivashchuk.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask-appbuilder = "*"
gunicorn = "*"
mistune = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
